--- a/SwiftyDocs/Resources/Base.lproj/Main.storyboard
+++ b/SwiftyDocs/Resources/Base.lproj/Main.storyboard
@@ -732,6 +732,9 @@
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <action selector="projectTitleUpdated:" target="XfG-lQ-9wD" id="XiT-Cc-nb5"/>
+                                </connections>
                             </textField>
                             <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GOw-DH-hIL">
                                 <rect key="frame" x="20" y="59" width="440" height="103"/>
