--- a/SwiftyDocs/Resources/Base.lproj/Main.storyboard
+++ b/SwiftyDocs/Resources/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -413,24 +412,24 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="SwiftDocViewController" customModule="SwiftyDocs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YvJ-A8-ynH">
-                                <rect key="frame" x="14" y="222" width="117" height="32"/>
+                                <rect key="frame" x="14" y="224" width="117" height="32"/>
                                 <buttonCell key="cell" type="push" title="Load Project" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IlP-aC-Sf4">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="buttonPressed:" target="XfG-lQ-9wD" id="0fZ-Ld-nSE"/>
+                                    <action selector="loadButtonPressed:" target="XfG-lQ-9wD" id="0fZ-Ld-nSE"/>
                                 </connections>
                             </button>
                             <progressIndicator wantsLayer="YES" maxValue="100" displayedWhenStopped="NO" indeterminate="YES" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="jbE-xv-JKa">
-                                <rect key="frame" x="145" y="231" width="315" height="20"/>
+                                <rect key="frame" x="145" y="233" width="315" height="20"/>
                             </progressIndicator>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xjh-Xq-yXq">
-                                <rect key="frame" x="20" y="182" width="440" height="27"/>
+                                <rect key="frame" x="20" y="184" width="440" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="QEy-Os-MJn"/>
                                 </constraints>
@@ -444,10 +443,10 @@
                                 </connections>
                             </textField>
                             <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GOw-DH-hIL">
-                                <rect key="frame" x="20" y="59" width="440" height="103"/>
+                                <rect key="frame" x="20" y="20" width="440" height="144"/>
                                 <subviews>
                                     <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uiC-8r-YXM">
-                                        <rect key="frame" x="0.0" y="82" width="440" height="21"/>
+                                        <rect key="frame" x="0.0" y="123" width="440" height="21"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="59T-8u-4SL">
                                                 <rect key="frame" x="-2" y="2" width="142" height="17"/>
@@ -479,7 +478,7 @@
                                         </customSpacing>
                                     </stackView>
                                     <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ITe-Da-YXL">
-                                        <rect key="frame" x="0.0" y="41" width="440" height="21"/>
+                                        <rect key="frame" x="0.0" y="82" width="440" height="21"/>
                                         <subviews>
                                             <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="q92-2r-yOb">
                                                 <rect key="frame" x="-3" y="-3" width="446" height="25"/>
@@ -498,7 +497,7 @@
                                         </customSpacing>
                                     </stackView>
                                     <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="20" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dl4-I3-nMa">
-                                        <rect key="frame" x="0.0" y="0.0" width="440" height="21"/>
+                                        <rect key="frame" x="0.0" y="41" width="440" height="21"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iPL-H4-20Q">
                                                 <rect key="frame" x="-2" y="2" width="41" height="17"/>
@@ -562,9 +561,20 @@
                                             <real value="3.4028234663852886e+38"/>
                                         </customSpacing>
                                     </stackView>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0G9-vI-ZE5">
+                                        <rect key="frame" x="-6" y="-7" width="452" height="32"/>
+                                        <buttonCell key="cell" type="push" title="Export Documentation" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vlu-HW-Hu1">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="exportButtonPressed:" target="XfG-lQ-9wD" id="nIt-IC-A48"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="ITe-Da-YXL" firstAttribute="width" secondItem="uiC-8r-YXM" secondAttribute="width" id="ITY-5r-nOA"/>
+                                    <constraint firstItem="0G9-vI-ZE5" firstAttribute="width" secondItem="Dl4-I3-nMa" secondAttribute="width" id="NfK-BL-PiM"/>
                                     <constraint firstItem="uiC-8r-YXM" firstAttribute="width" secondItem="GOw-DH-hIL" secondAttribute="width" id="WM3-CB-V4t"/>
                                     <constraint firstItem="Dl4-I3-nMa" firstAttribute="width" secondItem="ITe-Da-YXL" secondAttribute="width" id="t0G-4y-AH8"/>
                                 </constraints>
@@ -572,8 +582,10 @@
                                     <integer value="1000"/>
                                     <integer value="1000"/>
                                     <integer value="1000"/>
+                                    <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
                                     <real value="3.4028234663852886e+38"/>
@@ -586,6 +598,7 @@
                             <constraint firstItem="GOw-DH-hIL" firstAttribute="top" secondItem="xjh-Xq-yXq" secondAttribute="bottom" constant="20" id="Tjx-5K-2Ar"/>
                             <constraint firstItem="jbE-xv-JKa" firstAttribute="leading" secondItem="YvJ-A8-ynH" secondAttribute="trailing" constant="20" id="Tq3-O1-5SM"/>
                             <constraint firstItem="YvJ-A8-ynH" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="V9h-47-4CD"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GOw-DH-hIL" secondAttribute="bottom" constant="20" id="YZa-nH-z8J"/>
                             <constraint firstItem="jbE-xv-JKa" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="bry-kx-RzU"/>
                             <constraint firstItem="xjh-Xq-yXq" firstAttribute="top" secondItem="YvJ-A8-ynH" secondAttribute="bottom" constant="20" id="f2S-7L-aYs"/>
                             <constraint firstItem="xjh-Xq-yXq" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="fyS-ZN-XO5"/>
@@ -596,6 +609,7 @@
                     </view>
                     <connections>
                         <outlet property="accessLevelPopUp" destination="5gI-VN-Sk8" id="2FN-5F-YET"/>
+                        <outlet property="exportButton" destination="0G9-vI-ZE5" id="5HB-8C-eCJ"/>
                         <outlet property="fileCountPopUp" destination="JJL-NI-kl5" id="RJ3-Sp-XBY"/>
                         <outlet property="formatPopUp" destination="wAI-QL-EU2" id="co7-5X-uMN"/>
                         <outlet property="loadProjectButton" destination="YvJ-A8-ynH" id="0Wy-Gb-VLp"/>
@@ -608,7 +622,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="75" y="656"/>
         </scene>
     </scenes>
 </document>
