--- a/SwiftyDocs/Resources/Base.lproj/Main.storyboard
+++ b/SwiftyDocs/Resources/Base.lproj/Main.storyboard
@@ -567,6 +567,9 @@
                                                         </items>
                                                     </menu>
                                                 </popUpButtonCell>
+                                                <connections>
+                                                    <action selector="formatPopupChanged:" target="XfG-lQ-9wD" id="pGq-q4-5v1"/>
+                                                </connections>
                                             </popUpButton>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qUh-Co-0Tk">
                                                 <rect key="frame" x="403" y="2" width="39" height="17"/>
